# seq

./: .gitignore  agent.py  flow.toml  readme.md  seq.macros.local.yaml.example  seq.macros.yaml
.ai/: handoff.md
agents/: readme.md  seqmem-observability.tsx  swift-cxx-interop.tsx
api/rust/seq_everruns_bridge/: Cargo.toml  README.md
api/rust/seq_everruns_bridge/examples/: print_tool_defs.rs
api/rust/seq_everruns_bridge/src/: lib.rs  maple.rs
docs/: action-pack-recipe-execution.md  agent-full-session-ingest-and-rag.md  agent-observability-impl.md  agent-observability-plan.md  agent-qa-capture.md  agent-rpc-v1.md  blazingmq-bridge.md  chdig.md  clickhouse-hive-integration.md  clickhouse-mode-wrapper.md  everruns-flow-integration.md  everruns-maple-dual-ingest.md  executable-md-recipes.md  flow-recipe-authoring-and-execution.md  how-to-write-optimized-cpp.md  kar-rl-signal-contract.md  karabiner-setup.md  karabiner-user-command-absolute-minimum.md  karabiner-user-command-receiver-integration.md  mac-knowledge.md  next-training-run-fast.md  next-type-rl-optimized-request.md  next-type-rl-pipeline-runbook.md  next-type-suggestions.md  optimized-recipe-authoring-for-ai.md  recipe-runtime-protocol.md  rl-signal-capture.md  router-rl-signal-contract.md  seq-capture-launchd.md  seq-harbor-capture.md  seq-health.md  seq-maple-forwarder.md  seq-remote-clickhouse.md  seq-signal-watchdog.md  teach-with-scraper.md  use-cases.md  zmode-rl-loop.md  zmode-rl-signal-contract.md
preprocessed_configs/: config.xml
tools/: action_pack_receiver_enable.sh  agent_qa_ingest.py  (+61 more)
(+63 files in other folders)
