[package]
name = "seq_everruns_bridge"
version = "0.1.0"
edition = "2021"
description = "Everruns client-side tool bridge for seqd RPC"
license = "MIT"

[dependencies]
seq_client = { path = "../seq_client" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
ureq = { version = "2.12", features = ["json"] }
